Updated Taekenlijst to V0.8.2
Bugs fixed
Probably added bugs
Also now you can't select buttons lol

--- a/Taekenlijst/manifest.json
+++ b/Taekenlijst/manifest.json
@@ -1,6 +1,6 @@
 {
     "background_color": "rgb(100, 100, 100)",
-    "description": "Do list to do",
+    "description": "To do list",
     "display": "fullscreen",
     "icons": [
         {
@@ -22,6 +22,6 @@
     ],
     "name": "Taekenlijst",
     "orientation": "portrait",
-    "short_name": "Taeken",
+    "short_name": "Taekenlijst",
     "theme_color": "rgb(100, 100, 100)"
 }
