--- a/Taekenlijst/manifest.json
+++ b/Taekenlijst/manifest.json
@@ -1,4 +1,8 @@
 {
+    "name": "Taekenlijst",
+    "orientation": "portrait",
+    "short_name": "Taekenlijst",
+    "theme_color": "rgb(100, 100, 100)",
     "background_color": "rgb(100, 100, 100)",
     "description": "To do list",
     "display": "fullscreen",
@@ -19,9 +23,5 @@
             "src": "TaekenLijst_logo512.png",
             "sizes": "512x512"
         }
-    ],
-    "name": "Taekenlijst",
-    "orientation": "portrait",
-    "short_name": "Taekenlijst",
-    "theme_color": "rgb(100, 100, 100)"
+    ]
 }
